# test_map_pointing

./: CMakeLists.txt  README.md  makeAntSphericalCosineProductsFiles.C  makeAntSphericalCosineProductsFiles.cxx  makeDeltaTFiles.cxx  makeDeltaTMapFiles.C  makeDeltaTMapFiles.cxx  makeSphCosProductFiles.cxx  testMapPointing.cxx
include/: eventCorrelator.h  graphTools.h
src/: eventCorrelator.cc  graphTools.cc
testMapPointingScripts/: testMapPointing-0.sl  testMapPointing-1.sl
